@@ -13,6 +13,8 @@ FAMILIA, CHANGES
 * ADDED: RedisObject option: quantize
 * ADDED: Familia::Object#savenx
 * ADDED: Can now include a Familia object in Familia::Object.index (it uses its index)
+* ADDED: Dependency multi_json
+* ADDED: Hash#to_json, Hash.from_json, Array#to_json, Array.from_json
 
 
 #### 0.7.0 (2011-03-04) ###############################
